# OCR

./: OCR_.ipynb  README.md
endpoint/endpoint/: settings.py  urls.py
endpoint/endpointapp/: apps.py  urls.py  views.py
preprocessing_c++/: CMakeLists.txt  main  main.cpp
